--- a/go.html
+++ b/go.html
@@ -12,7 +12,7 @@
   <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
   // 0.6.1, 0.7.0, 0.7.1 OK (0.7.2, 0.7.5 NO exist)
   -->
-  <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
+  <!-- <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script> -->
   <script type="text/javascript" src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
   <script>
     function _assert(desc, v) {
@@ -137,14 +137,14 @@
   }
 
   function attachVideo(id, stream) {
-    const videoElement = document.getElementById("video1");
+    const videoElement = document.getElementById("video");
     videoElement.srcObject = stream;
     videoElement.play();
     console.info("remote media start");
   }
 
   function detachVideo(id) {
-    const videoElement = document.getElementById("video1");
+    const videoElement = document.getElementById("video");
     videoElement.pause();
     videoElement.srcObject = null;
     console.info("remote media stop");
@@ -157,75 +157,85 @@
 
   </script>
   <script>
-    AFRAME.registerComponent('play-on-window-click', {
-      init: function () {
-        this.onClick = this.onClick.bind(this);
-      },
-      play: function () {
-        window.addEventListener('click', this.onClick);
-      },
-      pause: function () {
-        window.removeEventListener('click', this.onClick);
-      },
-      onClick: function (evt) {
-        hideWaitMessage();
-        joinRoom(null);
-        //startMediaAndJoinRoom();
-      }
-    });
+    joinRoom(null);
+    // AFRAME.registerComponent('play-on-window-click', {
+    //   init: function () {
+    //     this.onClick = this.onClick.bind(this);
+    //   },
+    //   play: function () {
+    //     window.addEventListener('click', this.onClick);
+    //   },
+    //   pause: function () {
+    //     window.removeEventListener('click', this.onClick);
+    //   },
+    //   onClick: function (evt) {
+    //     hideWaitMessage();
+    //     joinRoom(null);
+    //     //startMediaAndJoinRoom();
+    //   }
+    // });
 
-    AFRAME.registerComponent('hide-once-playing', {
-      schema: {type: 'selector'},
-      init: function () {
-        this.onPlaying = this.onPlaying.bind(this);
-        this.onPause = this.onPause.bind(this);
-      },
-      play: function () {
-        if (this.data) {
-          this.data.addEventListener('playing', this.onPlaying);
-          this.data.addEventListener('pause', this.onPause);
-        }
-      },
-      pause: function () {
-        if (this.data) {
-          this.data.removeEventListener('playing', this.onPlaying);
-          this.data.removeEventListener('pause', this.onPause);
-        }
-      },
-      onPlaying: function (evt) {
-        this.el.setAttribute('visible', false);
-      },
-      onPause: function (evt) {
-        this.el.setAttribute('visible', true);
-      }
-    });
+    // AFRAME.registerComponent('hide-once-playing', {
+    //   schema: {type: 'selector'},
+    //   init: function () {
+    //     this.onPlaying = this.onPlaying.bind(this);
+    //     this.onPause = this.onPause.bind(this);
+    //   },
+    //   play: function () {
+    //     if (this.data) {
+    //       this.data.addEventListener('playing', this.onPlaying);
+    //       this.data.addEventListener('pause', this.onPause);
+    //     }
+    //   },
+    //   pause: function () {
+    //     if (this.data) {
+    //       this.data.removeEventListener('playing', this.onPlaying);
+    //       this.data.removeEventListener('pause', this.onPause);
+    //     }
+    //   },
+    //   onPlaying: function (evt) {
+    //     this.el.setAttribute('visible', false);
+    //   },
+    //   onPause: function (evt) {
+    //     this.el.setAttribute('visible', true);
+    //   }
+    // });
 
   </script>
 </head>
 
 <body>
-  <div id="wait_massage">Please wait for loading ...</div>
+  <!-- <div id="wait_massage">Please wait for loading ...</div>
   <a-scene>
     <a-assets>
-      <video id="video1" autoplay loop crossorigin="anonymous" playsinline webkit-playsinline></video>
+      <video id="video" autoplay loop crossorigin="anonymous" playsinline webkit-playsinline></video>
     </a-assets>
-    <a-videosphere src="#video1" rotation="0 180 0"
+    <a-videosphere src="#video" rotation="0 180 0"
       play-on-window-click
     >
     </a-videosphere>
 
-    <a-camera user-height="0" wasd-controls-enabled="false" arrow-key-rotation>
+    <a-camera user-height="0" wasd-controls-enabled="false" arrow-key-rotation> -->
       <!-- Text element for display messaging.  Hide once video is playing. -->
-      <a-entity id="msg" position="0 -0.3 -1.5" text="align:center; 
+      <!-- <a-entity id="msg" position="0 -0.3 -1.5" text="align:center; 
               width:3;
               wrapCount:100;
               color: #FF8080;
               value:Please click window to start 360 video streaming."
-              hide-once-playing="#video1">
+              hide-once-playing="#video">
       </a-entity>
-    </a-camera>   
+    </a-camera>
+  </a-scene> -->
 
-  </a-scene>
+  <video id="video" autoplay loop style="display:none">
+      <!-- <source src="m20.MP4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'> -->
+    </video>
+    <script src="three.min.js"></script>
+    <script src="OrbitControls.js"></script>
+    <script src="theta-view.js"></script>
+    <script>
+    window.addEventListener( 'DOMContentLoaded', theta_view('video'), false );
+    </script>
 </body>
 <script type="text/javascript">
   //joinRoom();
